<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="3dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundo_item_recycler_view"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="7dp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textCel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/cel"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textCod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/cod"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textHoraI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/horaI"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textHoraF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/horaF"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textObs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/obs"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="17sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>