<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    tools:context=".fragments.ParadasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextCelulaFragmentParadas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:hint="@string/celula"
                android:imeOptions="flagNavigateNext"
                android:inputType="number"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextHoraInicialFragmentParadas"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editTextHoraInicialFragmentParadas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/horaIni"
                android:imeOptions="flagNavigateNext"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextHoraFimFragmentParadas"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/editTextCelulaFragmentParadas"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editTextHoraFimFragmentParadas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/horaFim"
                android:imeOptions="actionDone"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spinnerCodParadasFragmentParadas"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/editTextHoraInicialFragmentParadas"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:ignore="TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/spinnerCodParadasFragmentParadas"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:entries="@array/codigosParadas"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/editTextHoraFimFragmentParadas"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <Button
                android:id="@+id/buttonAddFragmentParadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="✔"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/editTextObservacaoFragmentParadas"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_percent=".20" />

            <EditText
                android:id="@+id/editTextObservacaoFragmentParadas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/obsErva"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/buttonAddFragmentParadas"
                app:layout_constraintEnd_toStartOf="@+id/buttonAddFragmentParadas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent=".75" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewParadasFragmentParadas"
            android:layout_width="401dp"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>