<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WorkActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarRoutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="@color/white">

            </androidx.appcompat.widget.Toolbar>

            <ImageButton
                android:id="@+id/imageButtonSync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:background="#00FFFFFF"
                android:padding="13dp"
                android:src="@android:drawable/stat_notify_sync"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonSignOutRoutes"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/buttonSignOutRoutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Sair"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbarRoutes"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <EditText
            android:id="@+id/editTextCel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/celula"
            android:imeOptions="flagNavigateNext"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editTextHoraI"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_weight="1"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextHoraI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/horaIni"
            android:imeOptions="flagNavigateNext"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editTextHoraF"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintStart_toEndOf="@+id/editTextCel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_weight="1"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextHoraF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/horaFim"
            android:imeOptions="actionDone"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintStart_toEndOf="@+id/editTextHoraI"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_weight="1"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:entries="@array/codigosParadas"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/editTextHoraF"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"

            app:layout_constraintVertical_weight="1"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="✔"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/editTextObs"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".20" />

        <EditText
            android:id="@+id/editTextObs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/obsErva"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonAdd"
            app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".75" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        tools:layout_editor_absoluteX="5dp">

        <TextView
            android:id="@+id/textCel"
            android:layout_width="30pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Célula"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCod"
            android:layout_width="30pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cód."
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textHoraI"
            android:layout_width="30pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Hora ini."
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textHoraF"
            android:layout_width="30pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Hora fim"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/obs"
            android:layout_width="30pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Obs."
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewParadas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>